# trabalhos-2

./: .gitignore  README.md
arq1/: build.xml
arq1/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
arq2/trab3/mips324k_sim/: CMakeLists.txt  Makefile  TODO  fat.out  mips324k_sim
arq2/trab3/mips324k_sim/input/: fat.asm  test1.asm  test10.asm  test2.asm  test3.asm  test4.asm  test5.asm  test6.asm  test7.asm  test8.asm  test9.asm
arq2/trab3/mips324k_sim/output/: out.s
arq2/trab3/mips324k_sim/src/: mips324k_sim.c  util.c
arq2/trab3/mips324k_sim/src/helpers/: linked_list.c  queue.c
arq2/trab3/mips324k_sim/src/helpers/include/: linked_list.h  queue.h
arq2/trab3/mips324k_sim/src/include/: mips324k_sim.h  util.h
arq2/trab3/mips324k_sim/src/parsers/: parser.c  sim.l  sim.y
arq2/trab3/mips324k_sim/src/parsers/include/: parser.h
arq2/trab3/mips324k_sim/src/simulator/: alu.c  branchComponent.c  simulator.c  util.c
arq2/trab3/mips324k_sim/src/simulator/include/: alu.h  branchComponent.h  simulator.h  util.h
bd/: README.md  trabalho.sql
cd/: memoria.CKT  ula.CKT
cg/: main.py  transformacoes.py
ed/: importar.h  main  util.c  util.h
estrutura/: importar.c  main  main.c  registro.txt  util.c  util.h
grafos1/: manut.c
mc/: cod1  cod1.c  newton_raphson  newton_raphson.c  tri.py  triangulacao.py
ord1/: registro.txt  remover.c
ord2/: insercao.c  main.c
ppioo/: README.md
pplf/: SDM 1.8.pl  teste.pl  trabalho.pl  trabalho1.pl
redes2/: ransomware.py  teste.txt
shm/: app.py  code.morse  text.txt  wavefile.py
(+420 files in other folders)
